<resources>
    <string name="app_name">MoneyTracker</string>
    
    <string name="navigation_drawer_open" translatable="false">Open navigation
    drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation
    drawer</string>

    <string name="content_authority">com.ldv.money_tracker</string>
    <string name="sync_account_type" translatable="false"> money_tracker.ldv.com</string>

    <string name="nav_drawer_expenses">Expenses</string>
    <string name="nav_drawer_categories">Categories</string>
    <string name="nav_drawer_statistics">Statistics</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="name_surname">Lubov Danchenko</string>
    <string name="email">lubov.danchenko@gmail.com</string>
    <string name="money_tracker">Money Tracker </string>
    <string name="nav_drawer_exit">Exit</string>
    <string name="exit">Exit</string>
    <string name="enter_amount">Enter sum</string>
    <string name="add_expense">Add expense</string>
    <string name="add_expense_activity">Add expense</string>
    <string name="Sum">Sum is too large</string>
    <string name="field">Fill out all fields </string>

    <string name="search_title">Search</string>
    <string name="short_login_or_password">Login and password must be longer than five characters</string>
    <string name="registration_success">Registration success</string>
    <string name="no_internet">No Internet on your device!</string>
    <string name="login">Login</string>
    <string name="registration">REGISTRATION</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="log_in_form">Log in</string>
    <string name="have_no_account">Have no account?</string>
    <string name="sign_up_">Sign up</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="wrong_login">Wrong login!</string>
    <string name="delete">Delete</string>
    <string name="add_new_category">Add new category</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="statistic">Statistic for categories</string>

    <!-- common -->
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Global notifications -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Updates Notifications</string>

    <!-- Vibrate option -->
    <string name="pref_enable_vibrate_notifications_key" translatable="false">
        enable_vibrate_notifications
    </string>
    <string name="pref_enable_vibrate_notifications_label">Vibrate</string>

    <string name="pref_notification_section">Notification settings</string>

    <!-- Sound option -->
    <string name="pref_enable_sound_notifications_key" translatable="false">enable_sound_notifications</string>
    <string name="pref_enable_sound_notifications_label">Sound</string>

    <!-- LED option -->
    <string name="pref_enable_led_notifications_key" translatable="false">enable_led_notifications</string>
    <string name="pref_enable_led_notifications_label">LED</string>

    <!-- Foreground option -->
    <string name="pref_enable_foreground_notifications_key" translatable="false">enable_foreground_notifications</string>
    <string name="pref_enable_foreground_notifications_label">Foreground</string>

    <!-- String for notification bar-->
    <string name="notification_message">There is a notification!</string>
    <string name="syncing_notification_message">Syncing categories and expenses success</string>
    <string name="syncing_notification_error">Syncing error</string>
    <string name="enter_description">Enter description</string>
    <string name="select_category">Select category</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="drawer_income">Income</string>
    <string name="add_income_activity">Добавить доход</string>
    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_summary">Вкл. или выкл. сеть WiFi</string>
    <string name="hints_title">Подсказки</string>
    <string name="hints_summary">Показывать подсказки</string>
    <string-array name="animals">
        <item>UAH грн.</item>
        <item>RUB руб.</item>
        <item>USD $</item>
        <item>EUR €</item>
    </string-array>
    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
</resources>
