<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single" >

        <item
            android:id="@+id/drawer_expenses"
            android:title="@string/nav_drawer_expenses"
            android:icon="@mipmap/ic_currency_usd_black_24dp"
            android:checked="true"/>

        <item
            android:id="@+id/drawer_categories"
            android:title="@string/nav_drawer_categories"
            android:icon="@mipmap/ic_format_align_justify_black_24dp"/>
        <item
            android:id="@+id/drawer_accounts"
            android:title="Счета"
            android:icon="@mipmap/card"/>

        <item
            android:id="@+id/drawer_income"
            android:title="@string/drawer_income"
            android:icon="@mipmap/money"/>

        <item
            android:id="@+id/drawer_planing"
            android:title="Планирование"
            android:icon="@mipmap/plan"/>

        <item
            android:id="@+id/drawer_statistics"
            android:title="@string/nav_drawer_statistics"
            android:icon="@mipmap/ic_chart_arc_black_24dp"/>
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/drawer_settings"
            android:title="@string/nav_drawer_settings"
            android:icon="@mipmap/ic_settings_black_24dp"/>
        <item
            android:id="@+id/drawer_exit"
            android:title="@string/nav_drawer_exit"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"/>

    </group>

</menu>