<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_income"
    android:theme="@style/AddActivity"
    android:padding="@dimen/add_expense_layout_padding">

    <TextView
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:id="@+id/text_sum"
        android:text="@string/enter_amount"
        android:layout_marginTop="35dp"/>

    <EditText
        android:layout_width="@dimen/edit_width"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text_sum"
        android:layout_marginTop="23dp"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:id="@+id/income_sum" />


    <TextView
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:id="@+id/text_spinner"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_below="@id/income_sum"
        android:text="@string/select_category"/>

    <Spinner
        android:layout_width="@dimen/edit_width"

        android:layout_height="wrap_content"
        android:id="@+id/spinner_income"
        android:layout_alignTop="@+id/text_spinner"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/text_spinner">

    </Spinner>

    <TextView
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:id="@+id/text_spinner_account"
        android:layout_marginTop="57dp"
        android:text="Выберите счет"
        android:layout_below="@+id/spinner_income"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="@dimen/edit_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_account"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/text_spinner_account">

    </Spinner>

    <TextView
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:id="@+id/text_date"
        android:text="@string/date"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="@dimen/edit_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_below="@+id/spinner_account"
        android:layout_toRightOf="@id/text_date"
        android:id="@+id/date"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:id="@+id/cancel"
            android:textSize="18sp"
            android:background="@color/background_color"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            android:layout_margin="12dp"
            android:textSize="18sp"
            android:background="@color/background_color"
            android:layout_weight="1"
            android:text="@string/add"
            />

    </LinearLayout>


</RelativeLayout>